--- a/src/main/webapp/WEB-INF/classes/jdbc.properties
+++ b/src/main/webapp/WEB-INF/classes/jdbc.properties
@@ -1,4 +1,4 @@
 driverClass=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/zqs_development
-username=root
-password=1qaz1234
+username=zqs
+password=123123
