--- a/src/main/webapp/WEB-INF/classes/jdbc.properties
+++ b/src/main/webapp/WEB-INF/classes/jdbc.properties
@@ -2,3 +2,7 @@ driverClass=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/zqs_development
 username=zqs
 password=123123
+shiro.applicationSalt=some salty value for this application
+shiro.hashAlgorithmName=SHA-512
+shiro.storedCredentialsHexEncoded=false
+shiro.hashIterations=1024
