--- a/src/main/webapp/WEB-INF/classes/application.properties
+++ b/src/main/webapp/WEB-INF/classes/application.properties
@@ -10,3 +10,10 @@ shiro.applicationSalt=some salty value for this application
 shiro.hashAlgorithmName=SHA-512
 shiro.storedCredentialsHexEncoded=false
 shiro.hashIterations=1024
+
+
+#------jdbc --------#
+driverClass=com.mysql.jdbc.Driver
+url=jdbc:mysql://localhost:3306/zqs_development
+username=zqs
+password=123123
